[package]
name = "codewandler-audio"
version = "0.3.0"
edition = "2024"
description = "Simple audio playback and audio capture"
license = "MIT"

[[example]]
name = "probe_devices"
path = "examples/probe_devices.rs"

[[example]]
name = "monitor"
path = "examples/monitor.rs"

[dependencies]
anyhow = "1.0.98"
crossbeam-channel = "0.5.15"
rodio = { version = "0.20.1" }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
