[package]
name = "codewandler-audio"
version = "0.4.0"
edition = "2024"
description = "Simple audio playback and audio capture"
license = "MIT"
repository = "https://github.com/codewandler/audio-rs"

[[example]]
name = "monitor"
path = "examples/monitor.rs"

[[example]]
name = "list_configs"
path = "examples/list_configs.rs"

[dependencies]
anyhow = "1.0.98"
crossbeam-channel = "0.5.15"
rodio = { version = "0.20.1" }
rubato = "0.16.2"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"

[dev-dependencies]
clap = { version = "4.5.40", features = ["derive"] }
tracing-subscriber = "0.3.19"
